syntax = "proto3";

package req_packager.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service DatasetService {
  // Lazily retrieve file hierarchy or file info for a dataset
  rpc BrowseDataset(BrowseDatasetRequest)
    returns (stream BrowseDatasetResponse);
}

message BrowseDatasetRequest {
  // Data repo identifier by url (opaque to client)
  string datarepo_url = 1;
  // Dataset identifier (opaque to client)
  string dataset_id = 2;
}

message BrowseDatasetResponse {
  // Server MUST send dataset_info as first message at INIT phase
  // Server MUST not send any more messages after COMPLETE phase
  enum BrowsePhase {
    PHASE_UNSPECIFIED = 0;
    PHASE_INIT = 1;
    PHASE_BROWSING = 2;
    PHASE_COMPLETED = 3;
  }

  BrowsePhase phase = 1;

  oneof event {
    // summury or basic metadata 
    DatasetInfo dataset_info = 2;
    // entry entity of file
    FileEntry file_entry = 3;
    // progress for how much is done already
    BrowseProgress progress = 4;
    // if any error happing when browsing
    BrowseError error = 5;
    // complete signal
    BrowseComplete complete = 6;
  }
}

message DatasetInfo {
  string repo_url = 1;
  string dataset_id = 2;
  string description = 3;

  optional uint64 total_files = 4;
  optional uint64 total_size_bytes = 5;

  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;

  map<string, string> tags = 8;
}

// structure partially borrow from unix file handler
message FileEntry {
  // abs path, root from dataset
  string path = 1;
  // basename
  string name = 2;
  // no matter basename or path ended with '/' or not, this is the only source of truth on 
  // it is a file or dir
  bool is_dir = 3;

  // size in bytes
  uint64 size_bytes = 4;
  // mime_type, unset if unknown
  optional string mime_type = 5;
  // checksum, sha256
  optional string checksum = 6;

  // latest time the file is modified
  google.protobuf.Timestamp modified_at = 7;
}

message BrowseProgress {
  uint64 files_scanned = 1;
  uint64 bytes_scanned = 2;

  // 0-100
  uint32 percent = 3;
  // path of file in processing 
  string path = 4;
}

message BrowseError {
  enum ErrorCode {
    // UNKNOWN at the moment cover most of errors, more specific error type will be added 
    // when it is clear on which errors might happen.
    UNKNOWN = 0;
    // DATASET is not available, for example, havester create the entry but the data repo might offline etc.
    INVALID_DATASET = 1;
    // IO_ERROR
    // TIMEOUT (for single file or for one dataset??)
  }

  ErrorCode code = 1;
  string message = 2;

  // path of file under processing where error raised
  string path = 3;
  // if fatal bail the browse process, otherwise can continue on other files.
  bool fatal = 4;
}

message BrowseComplete {
  uint64 total_files = 1;
  uint64 total_size_bytes = 2;

  bool success = 3;
  google.protobuf.Timestamp finish_at = 4;
}
